@startuml

title __SAMPLE's Class Diagram__\n

  namespace sample {
    class sample.Controller {
        + btnStartServer : Button
        + btnStopServer : Button
        + filesIncoming : ObservableList<FileTransfer>
        + filesOutgoing : ObservableList<FileTransfer>
        + lblStatus : Label
        + tblIncoming : TableView
        + tblOutgoing : TableView
        + txtPortNumber : TextField
        + exitApplication() : void
        + getLocalFile() : File
        + getLocalFiles() : List<File>
        + initialize() : void
        + sendFile(File) : void
        + sendMultipleFiles() : void
        + sendSingleFile() : void
        + startServer() : void
        + stopServer() : void
        - initIncomingTable() : void
        - initOutgoingTable() : void
    }
  }
  

  namespace sample {
    class sample.FileTransfer {
        + file : File
        + fileName : String
        + progress : double
        + status : String
        + FileTransfer(File) : FileTransfer
        + getFile() : File
        + getFileName() : String
        + getProgress() : double
        + getStatus() : String
    }
  }
  

  namespace sample {
    class sample.Main {
        {static} + main(String[])
        + start(Stage)
    }
  }
  

  namespace sample {
    class sample.Server {
        {static} + currentPort : int
        + in : DataInputStream
        + out : DataOutputStream
        + outgoingFiles : ArrayDeque<File>
        + receiveLoopThread : Thread
        + receivingFile : boolean
        + sendLoopThread : Thread
        + sendingFile : boolean
        + serverSocket : ServerSocket
        + socket : Socket
        + Server(int, Controller) : Server
        + initServer() : void
        + receiveFile() : void
        + sendFile() : void
        + shutDownServer() : void
        + startThreads() : void
        + stopThreads() : void
        - addCompletedRecordToIncoming(String) : void
        - getSocket() : void
    }
  }
  

  sample.Controller o-- sample.Server : server
  sample.Main -up-|> javafx.application.Application
  sample.Server o-- sample.Controller : controller


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
